# tag07-praxisarbeit-musterloesung

./: README.md
.github/workflows/: cd_deploy_ec2.yml
infrastructure/: cloud-init.yml
src/: README.md  pyproject.toml
src/app/: main.py
